# YOLOv1_QRcode_Detection

./: README.md  train.py  yoloLoss.py
nets/: resnet_yolo.py
test_thinker/: CMakeLists.txt  test_thinker  test_thinker.c
tmp.ignore/: YOLO.quant_memory_report.txt
